// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CircleBadge > respects the inline prop 1`] = `
<div
  class="sc-gsFSXq sZiDv"
/>
`;

exports[`CircleBadge > respects the variant prop 1`] = `
<div
  class="sc-gsFSXq bQLtXz"
/>
`;

exports[`CircleBadge > uses the size prop to override the variant prop 1`] = `
<div
  class="sc-gsFSXq fMmXtr"
  size="20"
/>
`;
